# Computer-Accounting

./: CMakeLists.txt  Diagnostic commands.txt  Tables in MySQL.txt  With my own requests.txt  compInfo.cpp  compInfo.h  computerdata.cpp  computerdata.h  computerdata.ui  infoLin.cpp  infoLin.h  infoPlatform.cpp  infoPlatform.h  infoWin.cpp  infoWin.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  myProcessManager.cpp  myProcessManager.h  powerShell.txt  smbios.cpp  smbios.h
